# cl-toolchain

./: .clang-format  .gitignore  CMakeLists.txt  cl-toolchain.sln  clara.natvis
CLARA/: CMakeLists.txt  README.md
CLARA/include/CLARA/: Assembly.h  Common.h  Compiler.h  Data.h  Diagnostic.h  IBinaryOutput.h  Label.h  Parser.h  Progress.h  Reporter.h  Source.h  Token.h  TokenStream.h  pch.h
CLARA/include/CLARA/Common/: Algorithm.h  File.h  Imports.h  Literals.h  String.h  Vector.h
CLARA/src/: Assembly.cpp  Compiler.cpp  Parser.cpp  Source.cpp  Token.cpp  pch.cpp
CLARA/src/Common/: String.cpp
CLARA/test/: CMakeLists.txt
CLARA/test/src/: AssemblyTest.cpp  CompilerHelper.h  CompilerTest.cpp  LexerTest.cpp  ParserHelper.h  ParserTest.cpp  SourceTest.cpp  main.cpp  pch.h
CLASM/: Assembly.cpp  Assembly.h  CLASM.vcxproj  CLASM.vcxproj.filters  Common.h  Compiler.cpp  Compiler.h  Data.h  Diagnostic.h  IBinaryOutput.h  Label.h  Parser.cpp  Parser.h  Progress.h  Reporter.h  Source.cpp  Source.h  System.h  Token.cpp  Token.h  TokenStream.h  pch.cpp
CLASM.Test/: AssemblyTest.cpp  CLASM.Test.vcxproj  CLASM.Test.vcxproj.filters  CompilerTest.cpp  LexerTest.cpp  ParserTest.cpp  SourceTest.cpp  main.cpp
CLASM/Common/: Algorithm.h  File.h  Imports.h  Literals.h  Macros.h  String.cpp  String.h
